{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 654,
  "lineage": "b4ec0d6b-2e5a-7c7d-5c01-d720846e0bf8",
  "resources": [
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986323537898:security-group/sg-0a9acfd8b57de0ef2",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0a9acfd8b57de0ef2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-082d446f3a4d4ed9d"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-us-east-1-eks-cluster-cluster-20250513175950637800000003",
            "name_prefix": "dev-us-east-1-eks-cluster-cluster-",
            "owner_id": "986323537898",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-east-1-eks-cluster-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-east-1-eks-cluster-cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aeec631fbbeccbf7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986323537898:security-group/sg-082d446f3a4d4ed9d",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082d446f3a4d4ed9d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a9acfd8b57de0ef2"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a9acfd8b57de0ef2"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a9acfd8b57de0ef2"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a9acfd8b57de0ef2"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a9acfd8b57de0ef2"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a9acfd8b57de0ef2"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "dev-us-east-1-eks-cluster-node-20250513175950636400000001",
            "name_prefix": "dev-us-east-1-eks-cluster-node-",
            "owner_id": "986323537898",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-east-1-eks-cluster-node",
              "Terraform": "true",
              "kubernetes.io/cluster/dev-us-east-1-eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-east-1-eks-cluster-node",
              "Terraform": "true",
              "kubernetes.io/cluster/dev-us-east-1-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aeec631fbbeccbf7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2888774708",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a9acfd8b57de0ef2",
            "security_group_rule_id": "sgr-0a069bc19ab83c2f4",
            "self": false,
            "source_security_group_id": "sg-082d446f3a4d4ed9d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3936758024",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-082d446f3a4d4ed9d",
            "security_group_rule_id": "sgr-0d3b29bcba45ad814",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1741285811",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-082d446f3a4d4ed9d",
            "security_group_rule_id": "sgr-06c6afbea9c318e72",
            "self": false,
            "source_security_group_id": "sg-0a9acfd8b57de0ef2",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2919846145",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-082d446f3a4d4ed9d",
            "security_group_rule_id": "sgr-0801d84817bdd1ac1",
            "self": false,
            "source_security_group_id": "sg-0a9acfd8b57de0ef2",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1732982423",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-082d446f3a4d4ed9d",
            "security_group_rule_id": "sgr-08b4819536db883e5",
            "self": false,
            "source_security_group_id": "sg-0a9acfd8b57de0ef2",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1947667126",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-082d446f3a4d4ed9d",
            "security_group_rule_id": "sgr-053a8059f2faaa4bb",
            "self": false,
            "source_security_group_id": "sg-0a9acfd8b57de0ef2",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-280377725",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-082d446f3a4d4ed9d",
            "security_group_rule_id": "sgr-093e649f8d6abf785",
            "self": false,
            "source_security_group_id": "sg-0a9acfd8b57de0ef2",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-103200971",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-082d446f3a4d4ed9d",
            "security_group_rule_id": "sgr-024a39ff9d757952b",
            "self": false,
            "source_security_group_id": "sg-0a9acfd8b57de0ef2",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2820082642",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-082d446f3a4d4ed9d",
            "security_group_rule_id": "sgr-01b664a2a08580023",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2312537207",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-082d446f3a4d4ed9d",
            "security_group_rule_id": "sgr-0ffe40eeda0b6bf8d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-763963288",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-082d446f3a4d4ed9d",
            "security_group_rule_id": "sgr-0adfb3fb613c90bcf",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"].network",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986323537898:network-acl/acl-0deaadc405e355e31",
            "default_network_acl_id": "acl-0deaadc405e355e31",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0deaadc405e355e31",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "986323537898",
            "subnet_ids": [
              "subnet-00ca8ae4b7196e354",
              "subnet-02798f4f06eae2a04",
              "subnet-051b7a1c59b42e3f0",
              "subnet-072bab33e221fb01b",
              "subnet-07c771e61d7068a2d",
              "subnet-087015c09e9037301"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0aeec631fbbeccbf7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"].network",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986323537898:route-table/rtb-0113c2eee594ab567",
            "default_route_table_id": "rtb-0113c2eee594ab567",
            "id": "rtb-0113c2eee594ab567",
            "owner_id": "986323537898",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0aeec631fbbeccbf7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"].network",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986323537898:security-group/sg-00759cbab995bc9ed",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-00759cbab995bc9ed",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "986323537898",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0aeec631fbbeccbf7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"].network",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f344bcbf34ad269",
            "arn": "arn:aws:ec2:us-east-1:986323537898:elastic-ip/eipalloc-07f344bcbf34ad269",
            "association_id": "eipassoc-0ef409bce0aaa9a52",
            "domain": "vpc",
            "id": "eipalloc-07f344bcbf34ad269",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0187e1d8657db75a4",
            "private_dns": "ip-10-0-1-209.ec2.internal",
            "private_ip": "10.0.1.209",
            "public_dns": "ec2-44-206-36-57.compute-1.amazonaws.com",
            "public_ip": "44.206.36.57",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-us-east-1a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"].network",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986323537898:internet-gateway/igw-0af4968ebbdb1d868",
            "id": "igw-0af4968ebbdb1d868",
            "owner_id": "986323537898",
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0aeec631fbbeccbf7"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"].network",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f344bcbf34ad269",
            "association_id": "eipassoc-0ef409bce0aaa9a52",
            "connectivity_type": "public",
            "id": "nat-0e95689f21f4e932d",
            "network_interface_id": "eni-0187e1d8657db75a4",
            "private_ip": "10.0.1.209",
            "public_ip": "44.206.36.57",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-051b7a1c59b42e3f0",
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"].network",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04d390542380e5c371080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e95689f21f4e932d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04d390542380e5c37",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"].network",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0af4968ebbdb1d868",
            "id": "r-rtb-057a2c3be9f187d341080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-057a2c3be9f187d34",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"].network",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986323537898:route-table/rtb-04d390542380e5c37",
            "id": "rtb-04d390542380e5c37",
            "owner_id": "986323537898",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e95689f21f4e932d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-private",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aeec631fbbeccbf7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"].network",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986323537898:route-table/rtb-057a2c3be9f187d34",
            "id": "rtb-057a2c3be9f187d34",
            "owner_id": "986323537898",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0af4968ebbdb1d868",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aeec631fbbeccbf7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"].network",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09dbb42348a1cf9b6",
            "route_table_id": "rtb-04d390542380e5c37",
            "subnet_id": "subnet-072bab33e221fb01b"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9e7d963a801b5a9",
            "route_table_id": "rtb-04d390542380e5c37",
            "subnet_id": "subnet-00ca8ae4b7196e354"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"].network",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4e6c852af6fc4ad",
            "route_table_id": "rtb-04d390542380e5c37",
            "subnet_id": "subnet-02798f4f06eae2a04"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a3bba9237419c39",
            "route_table_id": "rtb-04d390542380e5c37",
            "subnet_id": "subnet-087015c09e9037301"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"].network",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b1e2a9f68cf0a6c",
            "route_table_id": "rtb-057a2c3be9f187d34",
            "subnet_id": "subnet-051b7a1c59b42e3f0"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a03c423208308283",
            "route_table_id": "rtb-057a2c3be9f187d34",
            "subnet_id": "subnet-07c771e61d7068a2d"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"].network",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986323537898:subnet/subnet-072bab33e221fb01b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072bab33e221fb01b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986323537898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-db-us-east-1a",
              "Terraform": "true",
              "Type": "database"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-db-us-east-1a",
              "Terraform": "true",
              "Type": "database"
            },
            "vpc_id": "vpc-0aeec631fbbeccbf7"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986323537898:subnet/subnet-00ca8ae4b7196e354",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ca8ae4b7196e354",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986323537898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-db-us-east-1b",
              "Terraform": "true",
              "Type": "database"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-db-us-east-1b",
              "Terraform": "true",
              "Type": "database"
            },
            "vpc_id": "vpc-0aeec631fbbeccbf7"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"].network",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986323537898:subnet/subnet-02798f4f06eae2a04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02798f4f06eae2a04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986323537898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-private-us-east-1a",
              "Terraform": "true",
              "Type": "private applications",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-private-us-east-1a",
              "Terraform": "true",
              "Type": "private applications",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0aeec631fbbeccbf7"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986323537898:subnet/subnet-087015c09e9037301",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087015c09e9037301",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986323537898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-private-us-east-1b",
              "Terraform": "true",
              "Type": "private applications",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-private-us-east-1b",
              "Terraform": "true",
              "Type": "private applications",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0aeec631fbbeccbf7"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"].network",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986323537898:subnet/subnet-051b7a1c59b42e3f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051b7a1c59b42e3f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986323537898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-public-us-east-1a",
              "Terraform": "true",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-public-us-east-1a",
              "Terraform": "true",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0aeec631fbbeccbf7"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986323537898:subnet/subnet-07c771e61d7068a2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c771e61d7068a2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986323537898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-public-us-east-1b",
              "Terraform": "true",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc-public-us-east-1b",
              "Terraform": "true",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0aeec631fbbeccbf7"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"].network",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986323537898:vpc/vpc-0aeec631fbbeccbf7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0deaadc405e355e31",
            "default_route_table_id": "rtb-0113c2eee594ab567",
            "default_security_group_id": "sg-00759cbab995bc9ed",
            "dhcp_options_id": "dopt-0f1c80d30631f918f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aeec631fbbeccbf7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0113c2eee594ab567",
            "owner_id": "986323537898",
            "tags": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-us-east-1-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}